--- a/Practical_5.html
+++ b/Practical_5.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Map</title>
 </head>
-<body>
-    
+<body style="background-color:darkgray"> 
+    <h1 align="center" style="color:whitesmoke">Introduction to Front-End Technologies</h1>
+    <img src="Logo.jpg" style="width: 30%; display: block; margin-left: auto; margin-right: auto;" usemap=#map1>
 </body>
 </html>
