--- a/Practical_5.html
+++ b/Practical_5.html
@@ -8,5 +8,12 @@
 <body style="background-color:darkgray"> 
     <h1 align="center" style="color:whitesmoke">Introduction to Front-End Technologies</h1>
     <img src="Logo.jpg" style="width: 30%; display: block; margin-left: auto; margin-right: auto;" usemap=#map1>
+    <map name="map1">
+        <area shape="rect" coords="20,10,195,197" href="https://pulkit519.github.io/HTML/intro.html">
+        <area shape="circle" coords="330,100,95"href="https://pulkit519.github.io/CSS-/CSS.html">
+        <area shape="rect" coords="23,225,199,382"href="https://pulkit519.github.io/Practical_2/Practical-2.html">
+        <area shape="poly" coords="286,235,253,258,301,307,288,390,309,306,354,"href="https://pulkit519.github.io/Practical_2/Practical-2.html">
+    </map>
+    <h3 align="center" style="color:red">Click on any part of logo to know more about these technologies</h3>
 </body>
 </html>
