--- a/Practical_5.html
+++ b/Practical_5.html
@@ -6,6 +6,15 @@
     <title>Image Map</title>
 </head>
 <body style="background-color:darkgray"> 
+    <img src="menu.png" style="width: 90%; display: block; margin-left: auto; margin-right: auto;" usemap=#map2>
+    <map name="map2">
+        <area shape="rect" coords="68,84,200,37" href="https://pulkit519.github.io/FullStack_Practical/">
+        <area shape="rect" coords="246,84,430,37" href="https://pulkit519.github.io/Practical-1/Practical-1.html">
+        <area shape="rect" coords="464,84,665,37" href="https://pulkit519.github.io/Practical_2/Practical-2.html">
+        <area shape="rect" coords="684,84,875,37" href="https://pulkit519.github.io/Practical-3/Practical3.html">
+        <area shape="rect" coords="896,84,1099,37" href="https://pulkit519.github.io/Practical-4/Practical-4.html">
+        <area shape="rect" coords="1122,84,1325,37" href="https://pulkit519.github.io/Practical_5/Practical_5.html">
+    </map>
     <h1 align="center" style="color:whitesmoke">Introduction to Front-End Technologies</h1>
     <img src="Logo.jpg" style="width: 30%; display: block; margin-left: auto; margin-right: auto;" usemap=#map1>
     <map name="map1">
@@ -15,5 +24,6 @@
         <area shape="poly" coords="286,235,253,258,301,307,288,390,309,306,354,"href="https://pulkit519.github.io/Bootstrap/B.html">
     </map>
     <h3 align="center" style="color:red">Click on any part of logo to know more about these technologies</h3>
+    <h4>d</h4>
 </body>
 </html>
