--- a/Practical_5.html
+++ b/Practical_5.html
@@ -21,7 +21,7 @@
         <area shape="rect" coords="20,10,195,197" href="https://pulkit519.github.io/HTML/intro.html">
         <area shape="circle" coords="330,100,95"href="https://pulkit519.github.io/CSS-/CSS.html">
         <area shape="rect" coords="23,225,199,382"href="https://pulkit519.github.io/JS/JS.html">
-        <area shape="poly" coords="286,235,253,258,301,307,288,390,309,306,354,"href="https://pulkit519.github.io/Bootstrap/B.html">
+        <area shape="poly" coords="330,233,395,253,389,340,327,376,270,340,260,254"href="https://pulkit519.github.io/Bootstrap/B.html">
     </map>
     <h3 align="center" style="color:red">Click on any part of logo to know more about these technologies</h3>
     <h4>d</h4>
