modified to moblie version

--- a/Practical_5.html
+++ b/Practical_5.html
@@ -8,20 +8,20 @@
 <body style="background-color:darkgray"> 
     <img src="menu.png" style="width: 90%; display: block; margin-left: auto; margin-right: auto;" usemap=#map2>
     <map name="map2">
-        <area shape="rect" coords="68,84,200,37" href="https://pulkit519.github.io/FullStack_Practical/">
-        <area shape="rect" coords="246,84,430,37" href="https://pulkit519.github.io/Practical-1/Practical-1.html">
-        <area shape="rect" coords="464,84,665,37" href="https://pulkit519.github.io/Practical_2/Practical-2.html">
-        <area shape="rect" coords="684,84,875,37" href="https://pulkit519.github.io/Practical-3/Practical3.html">
-        <area shape="rect" coords="896,84,1099,37" href="https://pulkit519.github.io/Practical-4/Practical-4.html">
-        <area shape="rect" coords="1122,84,1325,37" href="https://pulkit519.github.io/Practical_5/Practical_5.html">
+        <area target="_self" shape="rect" coords="68,84,200,37" href="https://pulkit519.github.io/FullStack_Practical/">
+        <area target="_self" shape="rect" coords="246,84,430,37" href="https://pulkit519.github.io/Practical-1/Practical-1.html">
+        <area target="_self" shape="rect" coords="464,84,665,37" href="https://pulkit519.github.io/Practical_2/Practical-2.html">
+        <area target="_self" shape="rect" coords="684,84,875,37" href="https://pulkit519.github.io/Practical-3/Practical3.html">
+        <area target="_self" shape="ect" coords="896,84,1099,37" href="https://pulkit519.github.io/Practical-4/Practical-4.html">
+        <area target="_self" shape="rect" coords="1122,84,1325,37" href="https://pulkit519.github.io/Practical_5/Practical_5.html">
     </map>
     <h1 align="center" style="color:whitesmoke">Introduction to Front-End Technologies</h1>
     <img src="Logo.jpg" style="width: 30%; display: block; margin-left: auto; margin-right: auto;" usemap=#map1>
     <map name="map1">
-        <area shape="rect" coords="20,10,195,197" href="https://pulkit519.github.io/HTML/intro.html">
-        <area shape="circle" coords="330,100,95"href="https://pulkit519.github.io/CSS-/CSS.html">
-        <area shape="rect" coords="23,225,199,382"href="https://pulkit519.github.io/JS/JS.html">
-        <area shape="poly" coords="330,233,395,253,389,340,327,376,270,340,260,254"href="https://pulkit519.github.io/Bootstrap/B.html">
+        <area target="_self" shape="rect" coords="20,10,195,197" href="https://pulkit519.github.io/HTML/intro.html">
+        <area target="_self" shape="circle" coords="330,100,95"href="https://pulkit519.github.io/CSS-/CSS.html">
+        <area target="_self" shape="rect" coords="23,225,199,382"href="https://pulkit519.github.io/JS/JS.html">
+        <area target="_self" shape="poly" coords="330,233,395,253,389,340,327,376,270,340,260,254"href="https://pulkit519.github.io/Bootstrap/B.html">
     </map>
     <h3 align="center" style="color:red">Click on any part of logo to know more about these technologies</h3>
 </body>
